--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   /*font-family: "futura-pt, arial, sans-serif;;*/
   font-size: 13px;
   line-height: 20px;
-  font-family: "soleil",sans-serif;
+  font-family: "soleil",sans-serif !important;
   -ms-font-feature-settings: "liga","dlig";
   font-feature-settings: "liga","dlig";
   -webkit-font-smoothing: antialiased;
