Ch-ch-ch-changeeesssss 🚂
- Fix SSL console errors
- Footer padding

--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,5 @@ a.post-button-link:visited {
   margin-right: 4em;
 }
 footer {
-  padding-top: 4em;
-  padding-bottom: 4em;
+  padding: 4em !important;
 }
