hide hero illustration

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body:before {
     width: 100%;
     height: 100%;
     /*background-image: url(https://cdn.dribbble.com/users/2092964/screenshots/4132887/attachments/945443/dribbble_first_shot.jpg);*/
-    background-image: url(../img/wave.jpg);
+    /*background-image: url(../img/wave.jpg);*/
     background-size: auto 640px;
     background-repeat: no-repeat;
     background-position: left bottom;
